--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'//Add dependency
+    compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
 }
