--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'//Add dependency
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.google.zxing:core:3.2.1'
     testCompile 'junit:junit:4.12'
 }
