--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:hardwareAccelerated="true">
 
-        <activity android:name=".MainActivity"  android:configChanges="orientation|screenSize|keyboardHidden" >
+        <activity android:name=".MainActivity"  android:configChanges="orientation|screenSize|keyboardHidden" />
+        <activity android:name=".SplashScreen">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".ScanActivity"/>
+        <activity android:name=".RegisterActivity"/>
 
     </application>
 
