--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
 
     })
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'//Add dependency
     compile 'com.android.support:design:25.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'me.dm7.barcodescanner:zxing:1.9'
     compile 'com.google.zxing:core:3.2.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    compile 'com.dmitrymalkovich.android:material-design-dimens:1.4'
+
 }
