--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     compile 'com.dmitrymalkovich.android:material-design-dimens:1.4'
+    compile 'com.android.support:cardview-v7:25.2.0+'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
 
 }
