--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ScanActivity" />
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".WebViewActivity"/>
+        <activity android:name=".HistoricalActivity"/>
 
     </application>
 
