--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,9 @@ dependencies {
     compile 'com.dmitrymalkovich.android:material-design-dimens:1.4'
     compile 'com.android.support:cardview-v7:25.2.0+'
     compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
 
 }
